// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RowToggler /> should render without errors when closed 1`] = `
<button
  aria-expanded="false"
  aria-label="Expand Row"
  class="button--expand-or-collapse button--collapsed sc-bwzfXH bULTYd sc-bdVaJa emvgUO"
  data-index="3"
  data-tid=""
  role="button"
  size="45"
  type="button"
>
  <svg
    fill="#1F262D"
    height="15"
    viewBox="0 0 15 7"
    width="15"
  >
    <path
      d="M13.974.132a.614.614 0 0 0-.762 0L7.17 5.341 1.12.132C.916-.044.563-.037.376.125a.398.398 0 0 0-.167.332c0 .058.012.116.036.17a.385.385 0 0 0 .12.155l6.427 5.54a.568.568 0 0 0 .378.135.568.568 0 0 0 .377-.135l6.427-5.54a.422.422 0 0 0 .156-.325.42.42 0 0 0-.156-.325z"
    />
  </svg>
</button>
`;

exports[`<RowToggler /> should render without errors when open 1`] = `
<button
  aria-expanded="true"
  aria-label="Collapse Row"
  class="button--expand-or-collapse button--expanded sc-bwzfXH bULTYd sc-bdVaJa emvgUO"
  data-index="1"
  data-tid=""
  role="button"
  size="45"
  type="button"
>
  <svg
    fill="#1F262D"
    height="15"
    viewBox="0 0 15 7"
    width="15"
  >
    <path
      d="M13.974.132a.614.614 0 0 0-.762 0L7.17 5.341 1.12.132C.916-.044.563-.037.376.125a.398.398 0 0 0-.167.332c0 .058.012.116.036.17a.385.385 0 0 0 .12.155l6.427 5.54a.568.568 0 0 0 .378.135.568.568 0 0 0 .377-.135l6.427-5.54a.422.422 0 0 0 .156-.325.42.42 0 0 0-.156-.325z"
    />
  </svg>
</button>
`;
